objects/hed__Term__c.object
<CustomObject>
    <description>Unit of time in which academic activities are taking place.</description>
    <fields>
        <fullName>hed__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Terms</relationshipLabel>
        <relationshipName>Terms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>hed__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Grading_Period_Sequence__c</fullName>
        <description>Such as 1 for the first six week, 2 for the second six weeks, etc.</description>
        <label>Grading Period Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Instructional_Days__c</fullName>
        <description>The total number of instructional days in this term</description>
        <label>Instructional Days</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Parent_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to group terms together, such as 1st Quarter of 1st Semester of School Year.</description>
        <label>Parent Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Terms</relationshipLabel>
        <relationshipName>Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Type__c</fullName>
        <description>The type of term being configured.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Semester</fullName>
                </value>
                <value>
                    <fullName>School Year</fullName>
                </value>
                <value>
                    <fullName>Part of Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Term</label>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>